# Corn-Infection-Detection

./: .gitignore  Progress.md  README.md  Readme.md  pyproject.toml
corn_vision/: __init__.py
corn_vision/core/: __init__.py  configs.py  defs.py
corn_vision/data/: __init__.py  base.py  classification_dataset.py  detection_dataset.py
corn_vision/loss/: __init__.py  classification.py  detection.py
corn_vision/models/: __init__.py  base.py  classification.py  detection.py  utils.py
corn_vision/trainers/: __init__.py  base.py  classification.py  detection.py
corn_vision/utils/: __init__.py  annotations.py  image.py  logging.py  vis.py
notebooks/: Bounding Box and Region Generator.ipynb  classification.ipynb  train_classification.ipynb
trainers/: classification_trainer.py  detection_trainer.py
utils/: prepare_annotations.py
